--- a/views/layout.twig
+++ b/views/layout.twig
@@ -36,10 +36,13 @@
 						<a href="/">Home</a>
 					</li>
 					<li>
-						<a href="/blog/">Blog</a>
+						<a href="/index_290.html">Index</a>
 					</li>
 					<li>
 						<a href="/about.html">About</a>
+					</li>
+					<li>
+						<a href="/blog/">Blog</a>
 					</li>
 					<li>
 						<a href="https://twitter.com/ArchiesRecipes" target="_blank">
