--- a/views/contact.twig
+++ b/views/contact.twig
@@ -13,7 +13,7 @@
 		<article>
 			<h1>Contact</h1>
 			<p>Questions or comments? Please drop me a line.</p>
-			<form action="#" method="post">
+			<form action="/contact" method="post">
 				{{ form_widget(form.createView()) }}
 				<input type="submit" value="Send" />
 			</form>
