--- a/views/layout.twig
+++ b/views/layout.twig
@@ -45,6 +45,9 @@
 						<a href="/blog/">Blog</a>
 					</li>
 					<li>
+						<a href="/contact">Contact</a>
+					</li>
+					<li>
 						<a href="https://twitter.com/ArchiesRecipes" target="_blank">
 							Twitter
 							<i class="icon-twitter"></i>
