--- a/web/less/styles.less
+++ b/web/less/styles.less
@@ -252,6 +252,31 @@ div.archives
 	}
 }
 
+// double columns for recipes
+div.page
+{
+	article
+	{
+		ul 
+		{
+			-moz-column-count: 2;
+	        -moz-column-gap: 1rem;
+	        -webkit-column-count: 2;
+	        -webkit-column-gap: 1rem;
+	        column-count: 2;
+			column-gap: 1rem;
+			margin-left: 0;
+			padding: 0;
+
+
+			li {
+				padding-left: 1rem;
+				list-style-position: inside;
+			}
+		}
+	}
+}
+
 
 aside + div.page
 {
