Adding search interface and navigation

--- a/views/layout.twig
+++ b/views/layout.twig
@@ -45,7 +45,16 @@
 						<a href="/blog/">Blog</a>
 					</li>
 					<li>
-						<a href="/contact">Contact</a>
+						<a href="/search">
+							Search
+							<i class="icon-search"></i>
+						</a>
+					</li>
+					<li>
+						<a href="/contact">
+							Contact
+							<i class="icon-envelope"></i>
+						</a>
 					</li>
 					<li>
 						<a href="https://twitter.com/ArchiesRecipes" target="_blank">
