--- a/web/less/styles.less
+++ b/web/less/styles.less
@@ -338,7 +338,8 @@ form
 		min-height: 8rem;
 		resize: vertical;
 	}
-	input[type=submit]
+	input[type=submit],
+	button
 	{
 		border: 0;
 		-webkit-border-radius: .25rem;
