Change search title

--- a/views/search.twig
+++ b/views/search.twig
@@ -38,7 +38,7 @@
 			</ul>
 			{% endif %}
 
-			<h1>Search the site</h1>
+			<h1>Search Archie's recipes</h1>
 			<form action="/search" method="get">
 				<label>
 					Search recipes, blog posts, and site content
