--- a/views/layout.twig
+++ b/views/layout.twig
@@ -32,9 +32,9 @@
 			</h1>
 			<nav>
 				<ul>
-					<li>
-						<a href="/">Home</a>
-					</li>
+					{#<li>#}
+						{#<a href="/">Home</a>#}
+					{#</li>#}
 					<li>
 						<a href="/index_290.html">Index</a>
 					</li>
