--- a/web/less/styles.less
+++ b/web/less/styles.less
@@ -231,6 +231,8 @@ div.archives
 		}
 		&:last-of-type:after {content: none;}
 
+		p a {text-decoration: underline;}
+
 		table
 		{
 			width: 100%;
