--- a/web/css/styles.css
+++ b/web/css/styles.css
@@ -300,6 +300,7 @@ aside.modal img{border:none;display:block;width:100%;height:auto;max-height:none
 aside.modal a.closer{position:absolute;border:none;top:1rem;right:1rem;display:block;color:#444444;}
 div.page,div.archives{margin-top:1.5rem;margin-left:14rem;margin-right:14rem;padding-left:1.5rem;min-height:20rem;}div.page article:after,div.archives article:after{content:'✻';display:block;margin-top:0;margin-bottom:24px;margin-bottom:1.5rem;font-size:24px;font-size:1.5rem;line-height:1;color:#dddddd;text-align:center;}
 div.page article:last-of-type:after,div.archives article:last-of-type:after{content:none;}
+div.page article p a,div.archives article p a{text-decoration:underline;}
 div.page article table,div.archives article table{width:100%;}div.page article table tr td,div.archives article table tr td,div.page article table tr th,div.archives article table tr th{border-bottom:1px solid #ffffff;}
 div.page article table tr:last-child td,div.archives article table tr:last-child td,div.page article table tr:last-child th,div.archives article table tr:last-child th{border:none;}
 div.page article ul{-moz-column-count:2;-moz-column-gap:1rem;-webkit-column-count:2;-webkit-column-gap:1rem;column-count:2;column-gap:1rem;margin-left:0;padding:0;}div.page article ul li{padding-left:1rem;list-style-position:inside;}
