--- a/web/less/styles.less
+++ b/web/less/styles.less
@@ -1,8 +1,6 @@
-@import "normalize.less";
+@import "_normalize";
 @import "font-awesome";
-@import "baseType.less";
-
-* { -moz-box-sizing: border-box; -webkit-box-sizing: border-box; box-sizing: border-box; }
+@import "_baseType";
 
 @baseFontSize: 16px;
 
@@ -16,6 +14,9 @@
 @headerWidth: 12rem;
 @sidebarWidth: 12rem;
 @contentPadding: 1.5rem;
+
+html {box-size: border-box;}
+*, *:before, *:after {box-size: inherit;}
 
 /* base styles */
 html, body {height: 100%;}
